--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=Citronix
+# Database connection settings
+spring.datasource.url=jdbc:postgresql://localhost:5432/Citronix
+spring.datasource.username=postgres
+spring.datasource.password=action
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+# JPA Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
