--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # JPA Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.mvc.static-path-pattern=/static/**
+spring.web.resources.static-locations=classpath:/static/
+spring.jpa.open-in-view=false
+
