CIT-19 Suivre les récoltes par saison

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
 spring.jpa.open-in-view=false
+spring.jackson.stream-write-constraints.max-nesting-depth=2000
+
+
 
