--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.mvc.static-path-pattern=/static/**
-spring.web.resources.static-locations=classpath:/static/
+#spring.mvc.static-path-pattern=/static/**
+#spring.web.resources.static-locations=classpath:/static/
 spring.jpa.open-in-view=false
-spring.jackson.stream-write-constraints.max-nesting-depth=2000
+#spring.jackson.stream-write-constraints.max-nesting-depth=2000
 
 
 
